[gd_scene load_steps=3 format=3 uid="uid://bit64f5ndx4ve"]

[ext_resource type="Script" path="res://Prog82a.gd" id="1_kbh13"]

[sub_resource type="LabelSettings" id="LabelSettings_fs2fs"]
font_size = 30

[node name="Prog82a" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kbh13")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 97.0
offset_top = 57.0
offset_right = 368.0
offset_bottom = 108.0
text = "Enter Speed Limit:"
label_settings = SubResource("LabelSettings_fs2fs")

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 74.0
offset_top = 137.0
offset_right = 368.0
offset_bottom = 188.0
text = "Enter Vehicle Speed:"
label_settings = SubResource("LabelSettings_fs2fs")

[node name="lblout" type="Label" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 218.0
offset_right = 1124.0
offset_bottom = 480.0
label_settings = SubResource("LabelSettings_fs2fs")

[node name="txtLimit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 401.0
offset_top = 50.0
offset_right = 680.0
offset_bottom = 113.0

[node name="txtSpeed" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 406.0
offset_top = 130.0
offset_right = 685.0
offset_bottom = 193.0

[node name="btnCalc" type="Button" parent="."]
layout_mode = 0
offset_top = 504.0
offset_right = 297.0
offset_bottom = 646.0
text = "Caculate"

[node name="btnClear" type="Button" parent="."]
layout_mode = 0
offset_left = 413.0
offset_top = 504.0
offset_right = 710.0
offset_bottom = 646.0
text = "Clear"

[node name="btnExit" type="Button" parent="."]
layout_mode = 0
offset_left = 850.0
offset_top = 504.0
offset_right = 1147.0
offset_bottom = 646.0
text = "Exit "

[connection signal="pressed" from="btnCalc" to="." method="_on_btn_calc_pressed"]
[connection signal="pressed" from="btnClear" to="." method="_on_btn_clear_pressed"]
[connection signal="pressed" from="btnExit" to="." method="_on_btn_exit_pressed"]
